--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+*.bundle
+*.so
+*.o
+*.a
+mkmf.log
 config/config.yml
 transformed*
 json_data/*
